1.9.7.dev0
 * #968: Fix for a "spot" check error when a filename in the most recent archive contains a newline.
 * #970: Fix for an error when there's a blank line in the configured patterns or excludes.

1.9.6
 * #959: Fix an error in the Btrfs hook when a subvolume mounted at "/" is configured in borgmatic's
   source directories.
 * #960: Fix for archives storing relative source directory paths such that they contain the working
   directory.
 * #960: Fix the "spot" check to support relative source directory paths.
 * #962: For the ZFS, Btrfs, and LVM hooks, perform path rewriting for excludes and patterns in
   addition to the existing source directories rewriting.
 * #962: Under the hood, merge all configured source directories, excludes, and patterns into a
   unified temporary patterns file for passing to Borg. The borgmatic configuration options remain
   unchanged.
 * #962: For the LVM hook, add support for nested logical volumes.
 * #965: Fix a borgmatic runtime directory error when running the "spot" check with a database hook
   enabled.
 * #969: Fix the "restore" action to work on database dumps without a port when a default port is
   present in configuration.
 * Fix the "spot" check to no longer consider pipe files within an archive for file comparisons.
 * Fix the "spot" check to have a nicer error when there are no source paths to compare.
 * Fix auto-excluding of special files (when databases are configured) to support relative source
   directory paths.
 * Drop support for Python 3.8, which has been end-of-lifed.

1.9.5
 * #418: Backup and restore databases that have the same name but with different ports, hostnames,
   or hooks.
 * #947: To avoid a hang in the database hooks, error and exit when the borgmatic runtime
   directory overlaps with the configured excludes.
 * #954: Fix a findmnt command error in the Btrfs hook by switching to parsing JSON output.
 * #956: Fix the printing of a color reset code even when color is disabled.